# EvaluationEnginePython

./: .gitignore  generateFolds.ipynb  metafeatures.ipynb  processDataset.ipynb  pyproject.toml  run_evaluation.ipynb  testing.py
src/: folds.py  helpers.py  models.py  run_evaluation.py
src/features/: __init__.py  arff.py  models.py  module.py  serialization.py
src/process_dataset/: __init__.py  arff.py  module.py  splitting.py
src/qualities/: __init__.py  arff.py  module.py  serialization.py
src/runs/: __init__.py  evaluators.py  metrics.py  prediction_counter.py
