[project]
name = "evaluationenginepython"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "jupyterlab-lsp>=5.3.0",
    "liac-arff>=2.5.0",
    "openml>=0.15.1",
    "pandas>=3.0.3",
    "pandas-stubs~=3.0.3",
    "parqet>=1.0.4",
    "pymfe>=0.4.4",
    "scikit-learn>=1.9.0",
    "xmltodict>=1.0.4",
]
